# ai-sustainability-platform

./: .env.example  .gitignore  AGENT_TASKS.md  CLAUDE.md  TASK_LIST.md  ai_sustainability_platform_architecture.md  ai_sustainability_platform_core_design.md  pyproject.toml
.github/workflows/: api-health-check.yml  ci.yml  daily-update.yml  deploy-dashboard.yml  hourly-realtime.yml  weekly-forecast.yml
dashboard/: next.config.ts  package-lock.json  package.json
dashboard/src/app/: error.tsx  layout.tsx  page.tsx
data/dashboard/: agriculture.json  carbon.json  climate.json  energy.json  environment.json  overview.json
data/forecasts/: latest.json
data/realtime/: air_quality.json  carbon_intensity_uk.json  weather.json
data/registry/: datasets.yaml
data/status/: status.json
docs/: API_KEY_GUIDE.md  dashboard-redesign-spec.md
scripts/: export_dashboard_json.py  fetch_wayback_esg.py  live_test.py  test_corporate_connectors.py  test_esg_pdf_strategies.py  test_moenv_ghg.py
src/: __init__.py
src/agents/: __init__.py  base.py
src/connectors/: __init__.py  base.py
src/decision/: analyst_agent.py  debate_agent.py  groq_client.py  judge_agent.py  models.py  orchestrator.py  signal_agent.py
src/monitor/: __init__.py  health_checker.py  reporter.py  scheduler.py
src/pipelines/: agriculture.py  base.py  carbon.py  climate.py  cross_domain.py  energy.py  environment.py
src/registry/: __init__.py  cli.py  loader.py  models.py
src/utils/: config.py  logging.py  telegram.py
tests/: conftest.py
tests/unit/: test_base_connector.py  test_registry.py
(+275 files in other folders)
