[project]
name = "ai-sustainability-platform"
version = "0.1.0"
description = "AI Sustainability Decision Intelligence Platform"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "AlanChen75", email = "alan.chen75@gmail.com" }]

dependencies = [
    "requests>=2.31",
    "httpx>=0.27",
    "pandas>=2.2",
    "polars>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "respx>=0.21",
]
groq = ["groq>=0.9"]
cds = ["cdsapi>=0.7"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: marks tests that call real APIs (deselect with '-m \"not integration\"')",
]
